--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^22.0.2",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.6",
+    "udacifitness-calendar": "^11.0.0"
   }
 }
